tests/baselines/reference/emitArrowFunctionWhenUsingArguments08(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments08.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments08.ts(2,20): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments08.ts (2 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = () => (arguments) => arguments;
                       ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }